# IEP-L3-CMAKE

./: CMakeLists.txt  README.md
IEP-Lucrare4/: IEPLucrare4.cpp
p1/: CMakeLists.txt
p1/src/square/: square.cpp  square.hpp
p2/: CMakeLists.txt  main.cpp
